--- a/OtherIntroduction/OtherIntroduction/DetailViewController.xib
+++ b/OtherIntroduction/OtherIntroduction/DetailViewController.xib
@@ -18,15 +18,22 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5C5-ub-3LY">
-                    <rect key="frame" x="186" y="170" width="44" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Detail" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5C5-ub-3LY">
+                    <rect key="frame" x="167" y="164" width="80" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="80" id="IdK-Bn-H4w"/>
+                        <constraint firstAttribute="height" constant="40" id="hIG-vQ-tXm"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="5C5-ub-3LY" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="120" id="44t-F6-iPt"/>
+                <constraint firstItem="5C5-ub-3LY" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="EDs-Wm-TZB"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="139" y="94"/>
         </view>
